# twitter-telegram

./: README.md  config.cfg  get_hash.py  main.py  pyproject.toml  session.session  tg.py
data/: log.txt  outfile.pickle  users.json
data/usersData/: 1019660554472837120  1067029527245832192  122889863  1295766451530293249  1309346205491576832  1311393885806100481  1321502344660439040  1334952056390479873  1337862939659829248  1351139954525696005  1357259205191766016  1399393068562911232  1457113364161720321  162573283  17019152  1921427474  2969656619  357350166  385749492  803617802732990464  808513538  952087880918228992  993831364095983616  996294856078188544
